# Auto_Humidifier

./: .gitignore  CMakeLists.txt  README.md
components/dht/: .cproject  .project
components/esp_idf_lib_helpers/: .cproject
components/espressif__led_strip/: .cproject
components/espressif__led_strip/examples/led_strip_rmt_ws2812/: .cproject
components/espressif__led_strip/examples/led_strip_rmt_ws2812/main/: .cproject
components/espressif__led_strip/examples/led_strip_spi_ws2812/: .cproject
components/espressif__led_strip/examples/led_strip_spi_ws2812/main/: .cproject
main/: BlynkManager.cpp  BlynkManager.hpp  CMakeLists.txt  DHTSensor.cpp  DHTSensor.hpp  HumidifierController.cpp  HumidifierController.hpp  Main.cpp  PixelManager.cpp  PixelManager.hpp  Private.hpp  WIFIManager.cpp  WIFIManager.hpp  pinDefinitions.hpp
