idf_component_register(SRCS 
                        "Main.cpp"
                        "DHTSensor.cpp"
                        "HumidifierController.cpp"
                        "WIFIManager.cpp"
                        "BlynkManager.cpp"
                        "PixelManager.cpp"
                        INCLUDE_DIRS "."
                        )
